--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,14 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  console.log('hell0')
+  window.addEventListener("keydown", (e)=>{
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+
+    if(!audio) return;
+
+    audio.play();
+
+  })
 
 </script>
 
