--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,14 +58,27 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener("keydown", (e)=>{
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return;
+      this.classList.remove('playing')
 
-    if(!audio) return;
+    }
+    function playTheSound(e) {
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`div.key[data-key="${e.keyCode}"]`);
+      if (!audio) return;
 
-    audio.play();
+      audio.currentTime = 0;
+      audio.play();
+      key.classList.add('playing');
 
-  })
+    }
+    //Event listener for playing the sound
+    window.addEventListener("keydown", playTheSound);
+    const keys = document.querySelectorAll('div.key');
+    // transition end event
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition))
 
 </script>
 
